Add Generating JavaDoc documentation to build script